[package]
name = "nom-issue"
version = "0.1.0"
authors = ["Evan Tatarka <evan.tatarka@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nom = "5.0.1"
nom = { git = "https://github.com/Geal/nom" }
