[package]
name = "nom-issue"
version = "0.1.0"
authors = ["Evan Tatarka <evan.tatarka@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical_070 = { version = "0.7", package = "lexical-core" }
lexical_043 = { version = "0.4.3", package = "lexical-core" }

[dependencies.nom]
git = "https://github.com/Alexhuszagh/nom"
#default-features = false

